[project]
name = "return-to-sender"
version = "0.1.0"
description = "Add your description here"
license = "AGPL-3.0-or-later"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.5.1",
    "scipy>=1.18.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
